--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,20 @@
 *.exe
 *.out
 *.app
+/CppWinForm1/.vs/CppWinForm1/v14/.suo
+/stl_task_2/.vs/stl_task_2/v14/.suo
+/stl_task_2/Debug/stl_task_2.ilk
+/stl_task_2/stl_task_2.VC.VC.opendb
+/stl_task_2/stl_task_2.VC.db
+/stl_task_2/ipch/STL_TASK_2-2ce08044/STL_TASK_2-4f5a0982.ipch
+/stl_task_2/Debug/vc140.pdb
+/stl_task_2/Debug/vc140.idb
+/stl_task_2/Debug/stl_task_2.tlog/stl_task_2.lastbuildstate
+/stl_task_2/Debug/stl_task_2.tlog/link.write.1.tlog
+/stl_task_2/Debug/stl_task_2.tlog/link.read.1.tlog
+/stl_task_2/Debug/stl_task_2.tlog/link.command.1.tlog
+/stl_task_2/Debug/stl_task_2.tlog/CL.write.1.tlog
+/stl_task_2/Debug/stl_task_2.tlog/CL.read.1.tlog
+/stl_task_2/Debug/stl_task_2.tlog/CL.command.1.tlog
+/stl_task_2/Debug/stl_task_2.pdb
+/stl_task_2/Debug/stl_task_2.log
