Implemented struct Date with comparing, added some comparators to Bill class to order by some values of bill

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@
 /stl_task_2/Debug/stl_task_2.tlog/CL.command.1.tlog
 /stl_task_2/Debug/stl_task_2.pdb
 /stl_task_2/Debug/stl_task_2.log
+/stl_task_2/Debug/stl_task_2.tlog/unsuccessfulbuild
