Extracted Date from Bill because of it's size. Now it is class instead of struct. Added help_utils files to connect some functions from another project.

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@
 /stl_task_2/Debug/stl_task_2.pdb
 /stl_task_2/Debug/stl_task_2.log
 /stl_task_2/Debug/stl_task_2.tlog/unsuccessfulbuild
+/stl_task_2/Debug/stl_task_2.Build.CppClean.log
