--- a/stl_task_2/stl_task_2.vcxproj
+++ b/stl_task_2/stl_task_2.vcxproj
@@ -146,12 +146,16 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bill.h" />
+    <ClInclude Include="Date.h" />
+    <ClInclude Include="help_utils.h" />
     <ClInclude Include="ListClass.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Bill.cpp" />
+    <ClCompile Include="Date.cpp" />
+    <ClCompile Include="help_utils.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
