--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,16 @@
 /stl_task_2/Debug/stl_task_2.log
 /stl_task_2/Debug/stl_task_2.tlog/unsuccessfulbuild
 /stl_task_2/Debug/stl_task_2.Build.CppClean.log
+/stl_task_2/Debug/stl_task_2.tlog/link.9744.write.1.tlog
+/stl_task_2/Debug/stl_task_2.tlog/link.9744.read.1.tlog
+/stl_task_2/Debug/stl_task_2.tlog/link.9744-rc.write.1.tlog
+/stl_task_2/Debug/stl_task_2.tlog/link.9744-rc.read.1.tlog
+/stl_task_2/Debug/stl_task_2.tlog/link.9744-cvtres.write.1.tlog
+/stl_task_2/Debug/stl_task_2.tlog/link.9744-cvtres.read.1.tlog
+/stl_task_2/Debug/testpred.obj.enc
+/stl_task_2/Debug/templatecontainer.obj.enc
+/stl_task_2/Debug/stl_task_2.obj.enc
+/stl_task_2/Debug/stdafx.obj.enc
+/stl_task_2/Debug/help_utils.obj.enc
+/stl_task_2/Debug/date.obj.enc
+/stl_task_2/Debug/bill.obj.enc
