Some modification connected with input and editing records were made

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,29 @@
 /stl_task_2/Debug/help_utils.obj.enc
 /stl_task_2/Debug/date.obj.enc
 /stl_task_2/Debug/bill.obj.enc
+/stl_task_2/.vs/stl_task_2/v15
+/stl_task_2/Debug
+/stl_task_2/Debug/vc141.pdb
+/stl_task_2/Debug/vc141.idb
+/stl_task_2/Debug/stl_task_2.tlog/link.delete.1.tlog
+/stl_task_2/Debug/lnk{EA99778E-948A-4280-ADFC-EB907BD9611B}.tmp
+/stl_task_2/.vs/stl_task_2/v15/ipch/STL_TASK_2-2ce08044/STL_TASK_2-4f5a0982.ipch
+/stl_task_2/.vs/stl_task_2/v15/Browse.VC.opendb
+/stl_task_2/.vs/stl_task_2/v15/Browse.VC.db
+/stl_task_2/.vs/stl_task_2/v15/.suo
+/stl_task_2/Debug/vc141.pdb
+/stl_task_2/Debug/vc141.idb
+/stl_task_2/Debug/stl_task_2.tlog/link.delete.1.tlog
+/stl_task_2/Debug/lnk{EA99778E-948A-4280-ADFC-EB907BD9611B}.tmp
+/stl_task_2/.vs/stl_task_2/v15/ipch/STL_TASK_2-2ce08044/STL_TASK_2-4f5a0982.ipch
+/stl_task_2/.vs/stl_task_2/v15/Browse.VC.opendb
+/stl_task_2/.vs/stl_task_2/v15/Browse.VC.db
+/stl_task_2/.vs/stl_task_2/v15/.suo
+/stl_task_2/Debug/vc141.pdb
+/stl_task_2/Debug/vc141.idb
+/stl_task_2/Debug/stl_task_2.tlog/link.delete.1.tlog
+/stl_task_2/Debug/lnk{EA99778E-948A-4280-ADFC-EB907BD9611B}.tmp
+/stl_task_2/.vs/stl_task_2/v15/ipch/STL_TASK_2-2ce08044/STL_TASK_2-4f5a0982.ipch
+/stl_task_2/.vs/stl_task_2/v15/Browse.VC.opendb
+/stl_task_2/.vs/stl_task_2/v15/Browse.VC.db
+/stl_task_2/.vs/stl_task_2/v15/.suo
