--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,15 @@
 /stl_task_2/.vs/stl_task_2/v15/Browse.VC.opendb
 /stl_task_2/.vs/stl_task_2/v15/Browse.VC.db
 /stl_task_2/.vs/stl_task_2/v15/.suo
+/stl_task_2/x64/Debug/vc141.pdb
+/stl_task_2/x64/Debug/vc141.idb
+/stl_task_2/x64/Debug/stl_task_2.tlog/stl_task_2.lastbuildstate
+/stl_task_2/x64/Debug/stl_task_2.tlog/link.write.1.tlog
+/stl_task_2/x64/Debug/stl_task_2.tlog/link.read.1.tlog
+/stl_task_2/x64/Debug/stl_task_2.tlog/link.command.1.tlog
+/stl_task_2/x64/Debug/stl_task_2.tlog/CL.write.1.tlog
+/stl_task_2/x64/Debug/stl_task_2.tlog/CL.read.1.tlog
+/stl_task_2/x64/Debug/stl_task_2.tlog/CL.command.1.tlog
+/stl_task_2/x64/Debug/stl_task_2.pdb
+/stl_task_2/x64/Debug/stl_task_2.log
+/stl_task_2/x64/Debug/stl_task_2.ilk
