--- a/stl_task_2/stl_task_2.vcxproj
+++ b/stl_task_2/stl_task_2.vcxproj
@@ -145,17 +145,28 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AbstractFunctorCreator.h" />
+    <ClInclude Include="BaseFunctor.h" />
     <ClInclude Include="Bill.h" />
+    <ClInclude Include="Command.h" />
+    <ClInclude Include="CommandList.h" />
     <ClInclude Include="Date.h" />
+    <ClInclude Include="FunctorCreator.h" />
     <ClInclude Include="help_utils.h" />
+    <ClInclude Include="SearchFunctorFactory.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TemplateContainer.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AbstractFunctorCreator.cpp" />
+    <ClCompile Include="BaseFunctor.cpp" />
     <ClCompile Include="Bill.cpp" />
+    <ClCompile Include="Command.cpp" />
+    <ClCompile Include="CommandList.cpp" />
     <ClCompile Include="Date.cpp" />
     <ClCompile Include="help_utils.cpp" />
+    <ClCompile Include="SearchFunctorFactory.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
