--- a/stl_task_2/stl_task_2.vcxproj
+++ b/stl_task_2/stl_task_2.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="help_utils.h" />
     <ClInclude Include="SearchFunctorFactory.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="SurnameFunctor.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TemplateContainer.h" />
   </ItemGroup>
@@ -174,6 +175,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="stl_task_2.cpp" />
+    <ClCompile Include="SurnameFunctor.cpp" />
     <ClCompile Include="TemplateContainer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
