--- a/stl_task_2/stl_task_2.vcxproj
+++ b/stl_task_2/stl_task_2.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="Date.h" />
     <ClInclude Include="FunctorCreator.h" />
     <ClInclude Include="help_utils.h" />
+    <ClInclude Include="HouseNumberFunctor.h" />
     <ClInclude Include="SearchFunctorFactory.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="SurnameFunctor.h" />
@@ -166,6 +167,7 @@
     <ClCompile Include="CommandList.cpp" />
     <ClCompile Include="Date.cpp" />
     <ClCompile Include="help_utils.cpp" />
+    <ClCompile Include="HouseNumberFunctor.cpp" />
     <ClCompile Include="SearchFunctorFactory.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
