--- a/stl_task_2/stl_task_2.vcxproj.filters
+++ b/stl_task_2/stl_task_2.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="SurnameFunctor.h">
       <Filter>Header Files\Functors</Filter>
     </ClInclude>
+    <ClInclude Include="HouseNumberFunctor.h">
+      <Filter>Header Files\Functors</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -111,6 +114,9 @@
       <Filter>Source Files\SearchFactory</Filter>
     </ClCompile>
     <ClCompile Include="SurnameFunctor.cpp">
+      <Filter>Source Files\Functors</Filter>
+    </ClCompile>
+    <ClCompile Include="HouseNumberFunctor.cpp">
       <Filter>Source Files\Functors</Filter>
     </ClCompile>
   </ItemGroup>
