--- a/stl_task_2/stl_task_2.vcxproj
+++ b/stl_task_2/stl_task_2.vcxproj
@@ -146,15 +146,21 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstractFunctorCreator.h" />
+    <ClInclude Include="AddBillCommand.h" />
     <ClInclude Include="ApartmentNumberFunctor.h" />
     <ClInclude Include="BaseFunctor.h" />
     <ClInclude Include="Bill.h" />
     <ClInclude Include="Command.h" />
     <ClInclude Include="CommandList.h" />
     <ClInclude Include="Date.h" />
+    <ClInclude Include="DateFunctor.h" />
     <ClInclude Include="FunctorCreator.h" />
+    <ClInclude Include="HavePeniFunctor.h" />
     <ClInclude Include="help_utils.h" />
     <ClInclude Include="HouseNumberFunctor.h" />
+    <ClInclude Include="PrintCommand.h" />
+    <ClInclude Include="PrintToFileCommand.h" />
+    <ClInclude Include="ReadFromFileCommand.h" />
     <ClInclude Include="SearchFunctorFactory.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="SurnameFunctor.h" />
@@ -168,6 +174,8 @@
     <ClCompile Include="Command.cpp" />
     <ClCompile Include="CommandList.cpp" />
     <ClCompile Include="Date.cpp" />
+    <ClCompile Include="DateFunctor.cpp" />
+    <ClCompile Include="HavePeniFunctor.cpp" />
     <ClCompile Include="help_utils.cpp" />
     <ClCompile Include="HouseNumberFunctor.cpp" />
     <ClCompile Include="SearchFunctorFactory.cpp" />
