Reconfigurated to another target platform

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@
 /stl_task_2/Debug/stl_task_2.log
 /stl_task_2/Debug/stl_task_2.tlog/unsuccessfulbuild
 /stl_task_2/Debug/stl_task_2.Build.CppClean.log
+/stl_task_2/.vs/stl_task_2/v15/Browse.VC.opendb
+/stl_task_2/.vs/stl_task_2/v15/Browse.VC.db
