Created some commands to edit bill

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,4 @@
 /stl_task_2/x64/Debug/stl_task_2.pdb
 /stl_task_2/x64/Debug/stl_task_2.log
 /stl_task_2/x64/Debug/stl_task_2.ilk
+/stl_task_2/x64/Debug/stl_task_2.tlog/unsuccessfulbuild
