--- a/stl_task_2/stl_task_2.vcxproj
+++ b/stl_task_2/stl_task_2.vcxproj
@@ -163,9 +163,14 @@
     <ClInclude Include="PrintToFileCommand.h" />
     <ClInclude Include="ReadFromFileCommand.h" />
     <ClInclude Include="SearchFunctorFactory.h" />
+    <ClInclude Include="SetApartmentNumberCommand.h" />
     <ClInclude Include="SetBlockNumberCommand.h" />
+    <ClInclude Include="SetDayCommand.h" />
     <ClInclude Include="SetHouseNumberCommand.h" />
+    <ClInclude Include="SetMonthCommand.h" />
     <ClInclude Include="SetStreetCommand.h" />
+    <ClInclude Include="SetSurnameCommand.h" />
+    <ClInclude Include="SetYearCommand.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="SurnameFunctor.h" />
     <ClInclude Include="targetver.h" />
@@ -184,9 +189,14 @@
     <ClCompile Include="help_utils.cpp" />
     <ClCompile Include="HouseNumberFunctor.cpp" />
     <ClCompile Include="SearchFunctorFactory.cpp" />
+    <ClCompile Include="SetApartmentNumberCommand.cpp" />
     <ClCompile Include="SetBlockNumberCommand.cpp" />
+    <ClCompile Include="SetDayCommand.cpp" />
     <ClCompile Include="SetHouseNumberCommand.cpp" />
+    <ClCompile Include="SetMonthCommand.cpp" />
     <ClCompile Include="SetStreetCommand.cpp" />
+    <ClCompile Include="SetSurnameCommand.cpp" />
+    <ClCompile Include="SetYearCommand.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
