finished work at pattern reconfiguration

--- a/stl_task_2/stl_task_2.vcxproj
+++ b/stl_task_2/stl_task_2.vcxproj
@@ -154,7 +154,9 @@
     <ClInclude Include="CommandList.h" />
     <ClInclude Include="Date.h" />
     <ClInclude Include="DateFunctor.h" />
+    <ClInclude Include="decimal.h" />
     <ClInclude Include="EditRecordCommand.h" />
+    <ClInclude Include="ExitCommand.h" />
     <ClInclude Include="FunctorCreator.h" />
     <ClInclude Include="HavePeniFunctor.h" />
     <ClInclude Include="help_utils.h" />
@@ -162,12 +164,18 @@
     <ClInclude Include="PrintCommand.h" />
     <ClInclude Include="PrintToFileCommand.h" />
     <ClInclude Include="ReadFromFileCommand.h" />
+    <ClInclude Include="RemoveCommand.h" />
     <ClInclude Include="SearchFunctorFactory.h" />
+    <ClInclude Include="SelectCommand.h" />
     <ClInclude Include="SetApartmentNumberCommand.h" />
     <ClInclude Include="SetBlockNumberCommand.h" />
     <ClInclude Include="SetDayCommand.h" />
+    <ClInclude Include="SetDelayDaysNumberCommand.h" />
     <ClInclude Include="SetHouseNumberCommand.h" />
     <ClInclude Include="SetMonthCommand.h" />
+    <ClInclude Include="SetPaymentCommand.h" />
+    <ClInclude Include="SetPaymentTypeCommand.h" />
+    <ClInclude Include="SetPeniCommand.h" />
     <ClInclude Include="SetStreetCommand.h" />
     <ClInclude Include="SetSurnameCommand.h" />
     <ClInclude Include="SetYearCommand.h" />
@@ -188,12 +196,15 @@
     <ClCompile Include="HavePeniFunctor.cpp" />
     <ClCompile Include="help_utils.cpp" />
     <ClCompile Include="HouseNumberFunctor.cpp" />
-    <ClCompile Include="SearchFunctorFactory.cpp" />
     <ClCompile Include="SetApartmentNumberCommand.cpp" />
     <ClCompile Include="SetBlockNumberCommand.cpp" />
     <ClCompile Include="SetDayCommand.cpp" />
+    <ClCompile Include="SetDelayDaysNumberCommand.cpp" />
     <ClCompile Include="SetHouseNumberCommand.cpp" />
     <ClCompile Include="SetMonthCommand.cpp" />
+    <ClCompile Include="SetPaymentCommand.cpp" />
+    <ClCompile Include="SetPaymentTypeCommand.cpp" />
+    <ClCompile Include="SetPeniCommand.cpp" />
     <ClCompile Include="SetStreetCommand.cpp" />
     <ClCompile Include="SetSurnameCommand.cpp" />
     <ClCompile Include="SetYearCommand.cpp" />
