Fixed some errors while editing record

--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,7 @@
 /stl_task_2/x64/Debug/stl_task_2.log
 /stl_task_2/x64/Debug/stl_task_2.ilk
 /stl_task_2/x64/Debug/stl_task_2.tlog/unsuccessfulbuild
+/stl_task_2/lll
+/stl_task_2/p
+/stl_task_2/some
+/stl_task_2/x64/Debug/editrecordcommand.obj.enc
