--- a/stl_task_2/stl_task_2.vcxproj
+++ b/stl_task_2/stl_task_2.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="Bill.h" />
     <ClInclude Include="Command.h" />
     <ClInclude Include="CommandList.h" />
+    <ClInclude Include="ContainerUtils.h" />
     <ClInclude Include="Date.h" />
     <ClInclude Include="DateFunctor.h" />
     <ClInclude Include="decimal.h" />
