--- a/stl_task_2/stl_task_2.vcxproj.filters
+++ b/stl_task_2/stl_task_2.vcxproj.filters
@@ -156,6 +156,9 @@
     <ClInclude Include="SelectCommand.h">
       <Filter>Header Files\Commands</Filter>
     </ClInclude>
+    <ClInclude Include="ContainerUtils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
